# FactAnchor-MCP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  claude_desktop_config.example.json  crawl_worker.py  disk_cache.py  guardrail.py  pyproject.toml  requirements.txt  search_backends.py  semantic_chunker.py  server.py  text_cleaner.py
.github/workflows/: ci.yml
eval/: README.md  sample_queries.json
tests/: test_guardrail.py  test_text_cleaner.py  test_v2_features.py
